# adventofcode2024

./: README.md  adventofcode2024.cabal  cr.sh  initday.sh
app/: Main.hs
day_0/: main.hs
day_2/: main.hs
day_3/: main.hs
src/: Day00.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs
src/tools/: Input.hs  Parsing.hs  Tuples.hs
