cabal-version:      3.0
name:               adventofcode2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Ewen
maintainer:         ewenb1@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Tools.Input
        Day00
        Day01
        Day02
        Day03
        --key
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.17.2.1,
        split
    hs-source-dirs:   src
    default-language: Haskell2010

executable adventofcode2024
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        adventofcode2024

    hs-source-dirs:   app
    default-language: Haskell2010
